infra/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
  - secretName: tls-secret-api
    hosts:
    - api.sgerd.com
    - wordpress.sgerd.com
    - sgerd.com
  rules:
  - host: api.sgerd.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sgan-backend-svc
            port:
              number: 8080
  - host: wordpress.sgerd.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress-svc
            port:
              number: 8080
  - host: sgerd.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sgan-frontend-svc
            port:
              number: 8080
